[package]
name = "kernel"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

# Disable Stack Unwinding (Not supported by our kernel yet)
[profile.dev]
panic = "abort"

[profile.release]
panic = "abort"
